Fix background color not showing up

--- a/foundations/intro-to-css/02-class-id-selectors/style.css
+++ b/foundations/intro-to-css/02-class-id-selectors/style.css
@@ -1,15 +1,13 @@
-.All-odd-numbered {
-    background-color: rgb(rgb(237, 118, 118), green, blue);
-    font-family: verdana, DejaVu Sans, sans-serif;
+.odd {
+    background-color: rgb(255, 167, 167);
+    font-family: verdana, "DejaVu Sans", sans-serif;
 }
-#title {
-    color: rgb(rgb(22, 53, 210), green, blue);
+#two {
+    color: rgb(00,00,255);
     font-size: 36px;
 }
 #alpha {
-    color: rgb(rgb(0, 0, 0), green, blue);
-    background-color: rgb(rgb(124, 242, 95), green, blue)
-    font-size: 24px;
+    background-color: rgb(128, 237, 128);
     font-weight: bold;
 }
 .beta {
